# legaliosrust

./: Cargo.toml
src/: factories.rs  factories_tests.rs  history_tests.rs  lib.rs  operations_tests.rs  props.rs  providers.rs  service.rs  service_tests.rs
src/factories/: bundle_builder.rs  provider_factory.rs
src/factories_tests/: factory_health_test.rs  factory_salary_test.rs  factory_social_test.rs  factory_taxing_test.rs  factory_tests.rs
src/history_tests/: factories_history_test.rs  service_report_history_tests.rs
src/operations_tests/: dec_rounding_test.rs  salary_rounding_test.rs
src/props/: particy_result.rs  particy_results.rs  props.rs  props_health.rs  props_health_2010.rs  props_health_2012.rs  props_health_2014.rs  props_health_base.rs  props_salary.rs  props_social.rs  props_social_2010.rs  props_social_2012.rs  props_social_base.rs  props_taxing.rs  props_taxing_2010.rs  props_taxing_2014.rs  props_taxing_2018.rs  props_taxing_base.rs
src/providers/: history_const_health.rs  history_const_salary.rs  history_const_social.rs  history_const_taxing.rs  period_2010.rs  period_2011.rs  period_2012.rs  period_2013.rs  period_2014.rs  period_2015.rs  period_2016.rs  period_2017.rs  period_2018.rs  period_2019.rs  period_2020.rs  period_2021.rs  period_2022.rs  props_provider.rs
src/service/: bundle_props.rs  contract_terms.rs  history_result_errors.rs  operations_dec.rs  operations_period.rs  operations_round.rs  period.rs  service_legalios.rs  taxing_options.rs  version_id.rs
src/service_tests/: example_01_health_01_min_monthly_basis_test.rs  (+56 more)
(+104 files in other folders)
