[package]
name = "legalios"
version = "0.22.2"
edition = "2018"
description = "Salary, Health, Social, Taxing Properties for years 2011-2022"
documentation = "https://mzdyhrave.github.io/payrolldocs/"
readme = "library-readme.md"
license-file = "LICENSE"
keywords = ["payroll", "wages", "income", "tax", "insurance"]

include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.16"
rust_decimal_macros = "1.16"
chrono = "0.4"